@@ -4,10 +4,12 @@
 =======================================================
 
 
+16 Jul 2007      Preprocessor bug of NEC SX6 fixed; WORKSROUND7 added to iotk lib,
+                 thanks to Guido Roma and Paolo Giannozzi. (AF)
+
 -------------------------------------------------
 Date: 12 Jul 2007    Version: WanT-2.1.0
 -------------------------------------------------
-
 
 12 Jul 2007      Bug fixed in configure: when not searching for parallel environment,
                  mkl libs were not properly searched. (AF)
